# Application_Recette

./: CMakeLists.txt  main.cpp
src/: main.cpp
src/qml/: Main.qml  Recette.qml
